--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 			<version>5.24.3</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.17.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
